nginx/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1
  namespace: nginx-demo
  labels:
    app: nginx-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - image: nginx
        name: nginx-1
