nginx/04-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-istio-gateway
  namespace: nginx-demo
spec:
  selector:
    istio: ingress-gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
  namespace: nginx-demo
spec:
  hosts:
  - "*"
  gateways:
  - nginx-istio-gateway
  http:
  - name: "nginx"
    match:
    - uri:
        prefix: "/"
      ignoreUriCase: true
    route:
    - destination:
        host: nginx-1
        port:
          number: 80
